--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "angular-ui-bootstrap": "^2.5.6",
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "gulp-htmlbuild": "^0.4.2",
@@ -16,5 +17,8 @@
     "run-sequence": "^2.2.1",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3"
+  },
+  "dependencies": {
+    "font-awesome-icons": "^1.4.3"
   }
 }
